--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
+	id 'java-library'
 }
 
 group = 'dev.be'
@@ -23,6 +24,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	api 'org.springframework.boot:spring-boot-starter-data-jpa' // api 키워드를 사용하기 위해서는 plugins 에 id 'java-library' 추가
+	implementation 'mysql:mysql-connector-java'
 }
 
 tasks.named('test') {
