--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -32,3 +32,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.named('test') {
+	useJUnitPlatform()
+}
+
+tasks.bootJar { enabled = false }
+tasks.jar { enabled = true }
+
+// ./gradlew clean :module-api:buildNeeded --stacktrace --info --refresh-dependencies -x test
